src/test/deca/codegen/valid/soustraction_commut.deca
// Description:
//    test soustraction commut
//
// Resultats:
//  2
//
// Historique:
//    cree le 13/01/2017
{
int x = 0;
x = 2 - x;
print(x);
}
