src/test/deca/codegen/invalid/decla_noInit_f.deca
// Description:
//    declaration sans initialisation
//
// Resultats:
//  0
//
// Historique:
//    cree le 13/01/2017
{
float x;
print(x);
}
